--- a/test/regression/cases/otel_to_otel_logs-collector-no-payload/datadog-agent/otel-config.yaml
+++ b/test/regression/cases/otel_to_otel_logs-collector-no-payload/datadog-agent/otel-config.yaml
@@ -5,6 +5,13 @@ receivers:
         endpoint: 0.0.0.0:4317
       http:
         endpoint: 0.0.0.0:4318
+  prometheus:
+    config:
+      scrape_configs:
+      - job_name: 'otelcol'
+        scrape_interval: 10s
+        static_configs:
+        - targets: ['0.0.0.0:8888']        
 exporters:
   datadog:
     traces:
@@ -16,6 +23,8 @@ exporters:
       site: 127.0.0.1:9092
     metrics:
       resource_attributes_as_tags: true
+      endpoint: http://127.0.0.1:9091
+    logs:
       endpoint: http://127.0.0.1:9091
       
 
